--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   traefik:
-    image: traefik:v2.10
+    image: traefik:v3.0
     container_name: traefik
     restart: unless-stopped
     security_opt:
@@ -12,24 +10,37 @@ services:
       - "443:443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./data/traefik/traefik.yml:/traefik.yml:ro
+      - ./data/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
       - ./data/traefik/acme.json:/acme.json
     environment:
       - CF_API_EMAIL=${CLOUDFLARE_EMAIL}
-      # نکته مهم: CF_API_KEY یا CF_DNS_API_TOKEN باید به عنوان Secret در داکر تعریف شود
-      # برای سادگی در این مثال، آن را به عنوان متغیر محیطی در نظر می‌گیریم
-      # - CF_DNS_API_TOKEN=your_cloudflare_dns_api_token
+      - CLOUDFLARE_DNS_API_TOKEN=${CLOUDFLARE_DNS_API_TOKEN}
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.traefik-dashboard.rule=Host(`traefik.${DOMAIN_NAME}`)"
-      - "traefik.http.routers.traefik-dashboard.service=api@internal"
-      - "traefik.http.routers.traefik-dashboard.tls=true"
-      - "traefik.http.routers.traefik-dashboard.tls.certresolver=cloudflare"
-      - "traefik.http.routers.traefik-dashboard.middlewares=auth"
+      - "traefik.http.routers.api.rule=Host(`traefik.${DOMAIN_NAME}`)"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.api.tls.certresolver=cloudflare"
+      - "traefik.http.routers.api.middlewares=auth"
       - "traefik.http.middlewares.auth.basicauth.users=${TRAEFIK_AUTH}"
 
+  nginx:
+    image: nginx:stable-alpine
+    container_name: nginx
+    restart: unless-stopped
+    volumes:
+      - ./data/wordpress:/var/www/html
+      - ./data/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - wordpress
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.wordpress.rule=Host(`${DOMAIN_NAME}`)"
+      - "traefik.http.routers.wordpress.entrypoints=websecure"
+      - "traefik.http.routers.wordpress.tls=true"
+      - "traefik.http.routers.wordpress.tls.certresolver=cloudflare"
+
   wordpress:
-    image: wordpress:6.4-php8.2-fpm-alpine
+    image: wordpress:latest-fpm-alpine
     container_name: wordpress
     restart: unless-stopped
     volumes:
@@ -41,16 +52,9 @@ services:
       - WORDPRESS_DB_NAME=${DB_NAME}
     depends_on:
       - mariadb
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.wordpress.rule=Host(`${DOMAIN_NAME}`)"
-      - "traefik.http.routers.wordpress.entrypoints=websecure"
-      - "traefik.http.routers.wordpress.tls=true"
-      - "traefik.http.routers.wordpress.tls.certresolver=cloudflare"
-      - "traefik.http.services.wordpress.loadbalancer.server.port=9000"
 
   mariadb:
-    image: mariadb:10.11
+    image: mariadb:latest
     container_name: mariadb
     restart: unless-stopped
     volumes:
@@ -63,12 +67,7 @@ services:
     command: '--character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci'
 
   redis:
-    image: redis:7.2-alpine
+    image: redis:latest-alpine
     container_name: redis
     restart: unless-stopped
     command: redis-server --save 60 1 --loglevel warning
-
-volumes:
-  traefik_data:
-  wordpress_data:
-  db_data:
