--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,18 @@
-# --- General Settings ---
-DOMAIN_NAME=your-domain.com
-CLOUDFLARE_EMAIL=your-cloudflare-email@example.com
+# --- Domain and Cloudflare Settings ---
+# Your main domain name (e.g., example.com)
+DOMAIN_NAME=
+# Your Cloudflare account email
+CLOUDFLARE_EMAIL=
+# Your Cloudflare API Token (with Edit Zone DNS permissions)
+CLOUDFLARE_DNS_API_TOKEN=
 
 # --- Database Credentials (Use strong, random passwords) ---
-DB_ROOT_PASSWORD=strong_root_password
+DB_ROOT_PASSWORD=
 DB_NAME=wordpress
 DB_USER=wp_user
-DB_PASSWORD=strong_user_password
+DB_PASSWORD=
 
-# --- Traefik Basic Auth (for dashboard, optional) ---
-# Generate with: echo $(htpasswd -nb user password) | sed -e s/\\$/\\$\\$/g
+# --- Traefik Basic Auth (for dashboard access) ---
+# Generate with: echo $(htpasswd -nb your_user your_password) | sed -e s/\\$/\\$\\$/g
 # Example for user: admin, pass: admin
 TRAEFIK_AUTH=admin:$$apr1$$k8I72L1.$$p9yH0FkS6LVj4rN/v21w8.
