--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - "traefik.http.routers.wordpress.tls.certresolver=cloudflare"
 
   wordpress:
-    image: wordpress:latest-fpm-alpine
+    image: wordpress:latest-php8.3-fpm-alpine
     container_name: wordpress
     restart: unless-stopped
     volumes:
