--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
     image: mariadb:latest
     container_name: mariadb
     restart: unless-stopped
+    ports:
+      - "3306:3306"
     volumes:
       - ./data/mariadb:/var/lib/mysql
     environment:
