--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     volumes:
       - ./data/wordpress:/var/www/html
       - ./data/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./data/nginx/uploads.conf:/etc/nginx/conf.d/uploads.conf:ro
     depends_on:
       - wordpress
     labels:
